<resources>
    <string name="app_name">crowdfunding</string>
    <string name="title_activity_after_login">after_login</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_search">Search</string>
    <string name="menu_home">Home</string>
    <string name="menu_bank">Banking</string>
    <string name="menu_cart">Place Order</string>
    <string name="menu_about">About</string>
    <string name="menu_setting">Settings</string>
    <string name="menu_logout">Logout</string>
    <string-array name="Role">
        <item>Choose Role</item>
        <item>Co-Operative society</item>
        <item>Farmer</item>
        <item>Funder</item>
    </string-array>
    <string-array name="Language">
        <item>Choose Language</item>
        <item>English</item>
        <item>Kannada</item>
    </string-array>
    <string-array name="CropType">
        <item>Choose Crop Type</item>
        <item>Kharif Crop</item>
        <item>Rabi Crop</item>
    </string-array>
    <string name="title_activity_after_farmer_login">After_farmer_login</string>
    <string name="menu_farmer_home">Home</string>
    <string name="menu_farmer_banking">Banking</string>
    <string name="action_settings">Settings</string>
    <string name="menu_cropinfo">Crop Information</string>
    <string name="menu_insurance">Insurance</string>
    <string name="menu_policies">Policies</string>
    <string name="menu_helpforum">Help Forum</string>
    <string name="menu_farmer_about">About</string>
    <string name="menu_dashboard">Dashboard</string>
    <string name="menu_farmer_logout">Logout</string>
    <string name="help_content">We are always available for our users,"\n"
        For any queries related to Kisaan Rakshak "\n" Application,"\n"
    Kindly Contact:
    </string>
    <string name="help_contacts">9513187277"\n"
   9986641573"\n"
   9740855985"\n"
    8762216798</string>
    <string name="setting_enter_name">Enter Name</string>
    <string name="settings_phone_number">Enter Phone Number</string>
    <string name="settings_email_id">Enter Mail Id</string>
    <string name="edit_profile_button">Edit Profile</string>
    <string name="user_phone_number">Enter Phone Number</string>
    <string name="user_login_heading">USER LOGIN</string>
    <string name="user_password">Password</string>
    <string name="login_button">Login</string>
    <string name="new_user_button">New User?</string>
    <string name="farmer_phone_number">Enter Phone Number</string>
    <string name="farmer_login_heading">USER LOGIN</string>
    <string name="farmer_password">Password</string>
    <string name="farmer_login_button">Login</string>
    <string-array name="schemes">
        <item name="scheme1">National Mission For Sustainable Agriculture (NMSA)</item>
        <item name="scheme2">Pradhan Mantri Krishi Sinchai Yojana (PMKSY)</item>
        <item name="scheme3">Paramparagat Krishi Vikas Yojana (PKVY)</item>
        <item name="scheme4">Pradhan Mantri Fasal Bima Yojana (PMFBY)</item>
        <item name="scheme5">Gramin Bhandaran Yojna</item>
        <item name="scheme6">Livestock insurance Scheme</item>
        <item name="scheme7">Scheme on Fisheries Training and Extension</item>
        <item name="scheme8">National Scheme on Welfare of Fishermen</item>
        <item name="scheme9">Micro Irrigation Fund (MIF)</item>
    </string-array>
    <string name="farmer_cropinfo_button">Click the button to Sell Your Crops</string>
    <string name="cooperative_welcome">Welcome</string>
    <string name="farmer_details_text">Farmer Details</string>
    <string name="crop_details_text">Crop Details</string>
    <string name="register_farmer_text">Register Farmer</string>
    <string name="cooperative_scheme_text">Schemes</string>
    <string name="send_money">Money Transaction</string>
    <string name="add_account">Add Bank Account</string>
    <string name="check_balance">Check Balance</string>
    <string name="about_description">Kissan Rakshak, an application exclusively developed for the welfare of Indian Farmers.It uses crowd Funding technique to fund farmers with money required to cultivate their crops.The Farmers are given a chance to return the borrowed amount with their yield rather than money.\n JAI KISSAN!!</string>
    <string name="rabi_crop_scheme">Rabi Crop\nAmount that can be sanctioned:\nRs.50,000 per acre</string>
    <string name="kharif_crop_scheme">Kharif Crop\nAmount that can be sanctioned:\nRs.50,000 per acre</string>
    <string-array name="farmer_policies">
        <item>Policy 1</item>
        <item>Policy 2</item>
        <item>Policy 3</item>
        <item>Policy 4</item>
        <item>Policy 5</item>
        <item>Policy 6</item>
    </string-array>
    <string-array name="policy_description">
        <item>Transactions will be completed only if the user has provided Bank Details</item>
        <item>All the necessary documents need to be verified and updated</item>
        <item>Requested amount will not be sanctioned if bank details or documents provided are found to be false</item>
        <item>Proofs to be submitted for every disaster/crop failure that occurred in your land</item>
        <item>Any number of crops can be sold in a day in Sell Crop Page</item>
        <item>Clear Description of Crops can sell your crop efficiently</item>
    </string-array>
    <string-array name="crop_insurance_name">
        <item>Crop Insurance</item>
        <item>Weather based Insurance</item>
        <item>Power Failure Insurance</item>
        <item>Rainfall Insurance/Varsha Bhima</item>
        <item>Mango  Insurance</item>
        <item>Plant Insurance</item>
        <item>Grapes Insurance</item>
        <item>Potato Insurance</item>
        <item>Wheat  Insurance</item>
        <item>Pulpwood Tree Insurance</item>
        <item>Rubber Insurance</item>
        <item>Coconut Insurance</item>
        <item>Rabi Weather Insurance</item>
    </string-array>
    <string-array name="insurance_description">
        <item>Crop Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Weather based Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Power Failure Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Rainfall Insurance/Varsha Bhima is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Mango  Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Plant Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Grapes Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Potato Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Wheat  Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Pulpwood Tree Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Rubber Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Coconut Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
        <item>Rabi Weather Insurance is purchased by agricultural producers,and subsidized by the federal government,to protect against either the loss of their crops due to natural disaster such as hail,drought, and floods, or the loss of revenue due to decline in the prices of agricultural commodities</item>
    </string-array>
    <string-array name="crop_name_farmer">
        <item>Potato</item>
        <item>Tomato</item>
        <item>Onion</item>
        <item>Carrot</item>
        <item>Beans</item>
        <item>Brinjal</item>
        <item>Cucumber</item>
        <item>Raddish</item>
        <item>Spinach</item>
        <item>Coriander Leaves</item>
        <item>BeetRoot</item>
        <item>Chillies</item>
        <item>Ladys Finger</item>
    </string-array>
</resources>