<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.crowdfunding.ui.home.HomeFragment"
        android:label="Schemes"
        tools:layout="@layout/fragment_scheme"/>

    <fragment
        android:id="@+id/nav_bank"
        android:name="com.example.crowdfunding.ui.bank.BankFragment"
        android:label="@string/menu_bank"
        tools:layout="@layout/fragment_bank"/>

    <fragment
        android:id="@+id/nav_cart"
        android:name="com.example.crowdfunding.ui.cart.CartFragment"
        android:label="@string/menu_cart"
        tools:layout="@layout/fragment_cart"/>

    <fragment
        android:id="@+id/nav_about"
        android:name="com.example.crowdfunding.ui.about.AboutFragment"
        android:label="@string/menu_about"
        tools:layout="@layout/fragment_about" />
    <fragment
        android:id="@+id/nav_setting"
        android:name="com.example.crowdfunding.ui.setting.SettingFragment"
        android:label="@string/menu_setting"
        tools:layout="@layout/fragment_setting" />

    <fragment
        android:id="@+id/nav_cropinfo"
        android:name="com.example.crowdfunding.ui.cropinfofarmer.CropInfoFragment"
        android:label="@string/menu_cropinfo"
        tools:layout="@layout/fragment_cropinfo_farmer"/>
    <fragment
        android:id="@+id/nav_insurance"
        android:name="com.example.crowdfunding.ui.insurancefarmer.InsuranceFragment"
        android:label="@string/menu_insurance"
        tools:layout="@layout/fragment_insurance_farmer"/>

    <fragment
        android:id="@+id/nav_policies"
        android:name="com.example.crowdfunding.ui.policiesfarmer.PoliciesFragment"
        android:label="@string/menu_policies"
        tools:layout="@layout/fragment_policies_farmer"/>


    <fragment
        android:id="@+id/nav_helpforum"
        android:name="com.example.crowdfunding.ui.helpforumfarmer.HelpforumFragment"
        android:label="@string/menu_helpforum"
        tools:layout="@layout/fragment_help_farmer" />


</navigation>