<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:id="@+id/user_login"
    tools:context=".LoginActivity">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cherry_cream_soda"
                android:text="@string/user_login_heading"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="36sp" />
            <EditText
                android:id="@+id/phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/amarante"
                android:ems="10"
                android:textSize="25sp"
                android:hint="@string/user_phone_number"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/spinner_background"
                android:inputType="phone"
                android:textColor="@android:color/black" />
            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/amarante"
                android:background="@drawable/spinner_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="25sp"
                android:ems="10"
                android:layout_marginTop="72dp"
                android:hint="@string/user_password"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/button1"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="60dp"
                android:background="@drawable/button_background"
                android:text="@string/login_button"
                android:onClick="b1"
                android:textAllCaps="false"
                style="?android:borderlessButtonStyle"
                android:fontFamily="@font/architects_daughter"
                android:textColor="@android:color/white"
                android:textSize="25sp"/>
            <Button
                android:id="@+id/signup"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="40dp"
                android:layout_marginBottom="40dp"
                android:onClick="register"
                android:background="@drawable/spinner_background"
                android:backgroundTint="#f0f4c3"
                style="?android:borderlessButtonStyle"
                android:text="@string/new_user_button"
                android:textAllCaps="false"
                android:fontFamily="@font/architects_daughter"
                android:textSize="25sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>