<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/user_login"
    android:orientation="vertical"
    tools:context=".FramerLogin">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="70dp"
        app:cardBackgroundColor="#52c7b8">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:src="@drawable/ic_arrow_back"/>
        </LinearLayout>

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/farmer_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="30dp"
                android:fontFamily="@font/cherry_cream_soda"
                android:text="@string/farmer_login_heading"
                android:textColor="@android:color/holo_green_dark"
                android:textSize="36sp" />
            <EditText
                android:id="@+id/farmer_phone"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="72dp"
                android:fontFamily="@font/amarante"
                android:ems="10"
                android:hint="@string/farmer_phone_number"
                android:textSize="25sp"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:background="@drawable/spinner_background"
                android:inputType="phone"
                android:textColor="@android:color/black" />
            <EditText
                android:id="@+id/farmer_password"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/amarante"
                android:background="@drawable/spinner_background"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:textSize="25sp"
                android:layout_marginTop="72dp"
                android:ems="10"
                android:hint="@string/farmer_password"
                android:inputType="textPassword" />
            <Button
                android:id="@+id/farmer_submit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_background"
                android:text="@string/farmer_login_button"
                android:fontFamily="@font/architects_daughter"
                android:textAllCaps="false"
                android:textColor="#FFFFFF"
                android:textSize="25sp" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>