<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:id="@+id/bank_fragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.bank.BankFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">
            <Button
                android:id="@+id/TransactMoney"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:background="@drawable/rounded_button"
                android:drawableRight="@drawable/send_money"
                android:text="@string/send_money"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/cherry_cream_soda"
                android:textColor="@android:color/black"
                android:paddingLeft="30dp"
                android:paddingRight="40dp" />
            <Button
                android:id="@+id/AddBankAccount"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:paddingStart="30dp"
                android:paddingEnd="40dp"
                android:background="@drawable/rounded_button"
                android:drawableRight="@drawable/add_account"
                android:text="@string/add_account"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:fontFamily="@font/cherry_cream_soda"
                android:textColor="@android:color/black"
                android:paddingLeft="30dp"
                android:paddingRight="40dp" />
            <Button
                android:id="@+id/CheckBalance"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_marginTop="30dp"
                android:paddingStart="30dp"
                android:paddingEnd="30dp"
                android:background="@drawable/rounded_button"
                android:drawableRight="@drawable/balance"
                android:text="@string/check_balance"
                android:textSize="20sp"
                android:textAllCaps="false"
                android:layout_marginBottom="30dp"
                android:fontFamily="@font/cherry_cream_soda"
                android:textColor="@android:color/black" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>